--- a/html/dmt_app.html
+++ b/html/dmt_app.html
@@ -109,11 +109,11 @@ $(document).ready(function(){
 		<div class="pageContent" style="border-left:1px #B8D0D6 solid;border-right:1px #B8D0D6 solid">
 			<div class="panelBar">
 				<ul class="toolBar">
-					<li><a class="add" href="#" onclick="return daAddApp();"><span>添加</span></a></li>
+					<li><a href="#" onclick="return daAddApp();"><i class='icon-plus'></i>添加</a></li>
 					<li class="line">line</li>
-					<li><a class="delete" href="#" id='da_del' onclick="return daDeleteApp();"><span>删除</span></a></li>
+					<li><a href="#" id='da_del' onclick="return daDeleteApp();"><i class='icon-minus'></i>删除</a></li>
 					<li class="line">line</li>
-					<li><a class="edit" href="#" id='da_mod' onclick="return daModApp();"><span>修改</span></a></li>
+					<li><a href="#" id='da_mod' onclick="return daModApp();"><i class='icon-edit'></i>修改</a></li>
 					<li class="line">line</li>
 				</ul>
 			</div>
