--- a/html/dmt_attr_manage.html
+++ b/html/dmt_attr_manage.html
@@ -18,7 +18,7 @@
 			<p>
 				<label>监控点类型：</label>
 				<input type="text" size="20" name="dam_attr_type_name" value="<?cs var:config.attr_type_name ?>" readonly="readonly" class="required" />
-				<a class="btnLook" href="<?cs var:config.cgipath ?>mt_slog_attr?action=lookUpAttrType4Add" lookupGroup="" ></a>
+				<a class="btnLook" href="<?cs var:config.cgipath ?>mt_slog_attr?action=lookUpAttrType4Add" title="监控点类型选择" lookupGroup="" ></a>
 			</p>
 			<p id='dam_data_type'>
 				<label>数据类型：</label>
