--- a/html/dmt_attr_type.html
+++ b/html/dmt_attr_type.html
@@ -73,13 +73,13 @@
 			<dl>
 				<dt>类型名称：</dt>
 				<dd>
-					<input type="text" id="attr_type_name" name="attr_type_name" class="required" maxlength="18" disabled /> 
+					<input type="text" id="attr_type_name" name="attr_type_name" class="required" maxlength="22" disabled /> 
 				</dd>
 			</dl>
 			<dl>
 				<dt>类型描述：</dt>
 				<dd>
-					<textarea rows="5" cols="30" id="attr_type_desc" name="attr_type_desc" maxlength="64" disabled></textarea>
+					<textarea rows="4" cols="50" id="attr_type_desc" name="attr_type_desc" maxlength="64" style="resize:none;" disabled></textarea>
 				</dd>
 			</dl>
 		</div>
