--- a/html/dmt_dlg_add_config.html
+++ b/html/dmt_dlg_add_config.html
@@ -70,9 +70,6 @@ function ddacOpAppChange()
 	var appIdx = $('#ddac_op_app').children('option:selected').data('index');
 	var app = dlc_app_modules.applist[appIdx];
 	if(app.module_count <= 0) {
-		$('#ddac_op_module').html('');
-		var msg = '应用：' + app.app_name + '，模块数目为 0，请先添加模块！';
-		alertMsg.info(msg);
 		return;
 	}
 
@@ -267,10 +264,8 @@ $(document).ready(function(){
 		</div>
 		<div class="formBar">
 			<ul>
-				<li><div class="button"><div class="buttonContent"><button type="submit">&nbsp;&nbsp;保&nbsp;存&nbsp;&nbsp;</button></div></div></li>
-				<li>
-					<div class="button"><div class="buttonContent"><button type="button" class="close">&nbsp;&nbsp;取&nbsp;消&nbsp;&nbsp;</button></div></div>
-				</li>
+				<li><button type="submit" class="buttonActive">保存</button></li>
+				<li><button type="button" class="buttonActive close">关闭</button></li>
 			</ul>
 		</div>
 	</form>
