--- a/html/dmt_dlg_add_sys_srv_config.html
+++ b/html/dmt_dlg_add_sys_srv_config.html
@@ -1,7 +1,4 @@
 <script language="javascript" type="text/javascript">
-
-var ddassc_set_list = $.parseJSON('<?cs var:config.sysset_list ?>');
-
 function ddasscValidateCallback(fm)
 {
 	<?cs if:config.action == "save_add_syssrv" ?>
@@ -73,15 +70,13 @@ $(document).ready(function(){
 			</p>
 			<p>
 				<label>绑定服务对象：</label>
-				<textarea rows="8" cols="50" name="ddassc_srv_for" id="ddassc_srv_for" alt="请输入绑定信息" />
+				<textarea rows="6" cols="50" name="ddassc_srv_for" id="ddassc_srv_for" alt="请输入绑定信息" style="resize:none;" />
 			</p>
 		</div>
 		<div class="formBar">
 			<ul>
-				<li><div class="button"><div class="buttonContent"><button type="submit">&nbsp;&nbsp;保&nbsp;存&nbsp;&nbsp;</button></div></div></li>
-				<li>
-					<div class="button"><div class="buttonContent"><button type="button" class="close">&nbsp;&nbsp;取&nbsp;消&nbsp;&nbsp;</button></div></div>
-				</li>
+				<li><button type="submit" class="buttonActive">保存</button></li>
+				<li><button type="button" class="buttonActive close">关闭</button></li>
 			</ul>
 		</div>
 	</form>
