--- a/html/dmt_dlg_user_detail.html
+++ b/html/dmt_dlg_user_detail.html
@@ -39,7 +39,8 @@
 	</div>
 
 	<div class="formBar">
-		<ul> <li><div class="button"><div class="buttonContent"><button type="button" class="close">&nbsp;&nbsp;关&nbsp;闭&nbsp;&nbsp;</button></div></div></li>
+		<ul> 
+			<li><button type="button" class="buttonActive close">关闭</button></li>
 		</ul>
 	</div>
 </div>
