--- a/html/dmt_dlg_warn_config_chart.html
+++ b/html/dmt_dlg_warn_config_chart.html
@@ -112,7 +112,7 @@ $(document).ready(function(){
 			<input type="hidden" name="action" value="save_set_warn_chart" />
 
 			<p>
-				<label style='width:60px'>清除告警：</label><input type="checkbox" name="c_warn_clear_not_sel" id="c_warn_clear_not_sel" />
+				<label style='width:60px'>清除告警:</label><input type="checkbox" name="c_warn_clear_not_sel" id="c_warn_clear_not_sel" />
 				<font class='note-text'>
 					<label class='for' style="float:right;width:380px;" for="c_warn_clear_not_sel"> 
 						- 清除以下未勾选的告警类型配置
