--- a/html/dmt_look_attr_type.html
+++ b/html/dmt_look_attr_type.html
@@ -39,7 +39,7 @@ $(document).ready(function(){
 	
 	<div class="formBar">
 		<ul>
-			<li><div class="button"><div class="buttonContent"><button class="close" type="button">&nbsp;&nbsp;关&nbsp;闭&nbsp;&nbsp;</button></div></div></li>
+			<li><button type="button" class="buttonActive close">关闭</button></li>
 		</ul>
 	</div>
 </div>
