--- a/html/dwz_header.html
+++ b/html/dwz_header.html
@@ -1,8 +1,9 @@
 <a class="logo" href="#"><img src="<?cs var:config.docpath ?>resource/xrk_logo.png"/></a>
 <ul class="nav">
-	<li><a href="#" id='dh_init_change_pwd'><i class="icon-key icon-large"></i>修改密码</a></li>
-	<li><a href="#" id="a_logout"><i class="icon-user icon-large"></i><?cs var:comm.user_name ?></a></li>
-	<li><a href="logout.do?userId=2" title="退出登录"><i class="icon-signout icon-large"></i>退出</a></li>
+	<li><a href="<?cs var:config.cgipath?>mt_slog_user?action=init_change_pwd" mask=true maxable=false
+		target="dialog" width="420" height="260"><i class="icon-key icon-large"></i>修改密码</a></li>
+	<li><a href="#"><i class="icon-user icon-large"></i><?cs var:comm.user_name ?></a></li>
+	<li><a href="#" id="a_logout" title="退出登录"><i class="icon-signout icon-large"></i>退出</a></li>
 </ul>
 
 <ul id="navMenu">
