--- a/html/dwz_left_m.html
+++ b/html/dwz_left_m.html
@@ -26,7 +26,7 @@
 	</div>
 
 	<div class="accordionHeader">
-		<h2><i class="icon-check-sign icon-large"></i>日志管理<i class="icon icon-chevron-up"></i></h2>
+		<h2><i class="icon-check-sign icon-large"></i>日志源管理<i class="icon icon-chevron-up"></i></h2>
 	</div>
 	<div class="accordionContent">
 		<ul class="tree treeFolder expand">
