--- a/html/dmt_dlg_add_user.html
+++ b/html/dmt_dlg_add_user.html
@@ -72,10 +72,8 @@ function ddau_customvalidPwd(ps)
 
 		<div class="formBar">
 			<ul>
-				<li><div class="button"><div class="buttonContent"><button type="submit"><?cs if:config.action=="save_mod_user" ?>&nbsp;&nbsp;修&nbsp;改&nbsp;&nbsp;<?cs else ?>&nbsp;&nbsp;新&nbsp;增&nbsp;&nbsp;<?cs /if ?></button></div></div></li>
-				<li>
-					<div class="button"><div class="buttonContent"><button type="button" class="close">&nbsp;&nbsp;关&nbsp;闭&nbsp;&nbsp;</button></div></div>
-				</li>
+				<li><button type="submit" class="buttonActive"><?cs if:config.action=="save_mod_user" ?>修改<?cs else ?>新增<?cs /if ?></button></li>
+				<li><button type="button" class="buttonActive close">关闭</button></li>
 			</ul>
 		</div>
 	</form>
