--- a/html/dmt_dlg_detail_syssrv.html
+++ b/html/dmt_dlg_detail_syssrv.html
@@ -92,7 +92,8 @@ $(document).ready(function(){
 	</div>
 
 	<div class="formBar">
-		<ul> <li><div class="button"><div class="buttonContent"><button type="button" class="close">&nbsp;&nbsp;关&nbsp;闭&nbsp;&nbsp;</button></div></div></li>
+		<ul> 
+			<li><button type="button" class="buttonActive close">关闭</button></li>
 		</ul>
 	</div>
 </div>
