--- a/html/dmt_user.html
+++ b/html/dmt_user.html
@@ -1,98 +1,73 @@
-<div class="pageContent">
-	<div class="unitBox" style="margin-left:1px;"> 
-		<form id="pagerForm" method="get" action="<?cs var:config.cgipath?>mt_slog_user?action=search_user">
-			<input type="hidden" name="pageNum" value="<?cs var:config.currentPage ?>" />
-			<input type="hidden" name="numPerPage" value="<?cs var:config.numPerPage ?>" />
-			<input type="hidden" name="orderField" value="<?cs var:config.orderField ?>" />
-			<input type="hidden" name="orderDirection" value="<?cs var:config.orderDirection ?>" />
-			<input type="hidden" name="dul_user_name" value="<?cs var:config.dul_user_name?>">
-		</form>
+<div class="pageHeader">
+	<form class="pagerForm" method="get" onsubmit="return navTabSearch(this);" action="<?cs var:config.cgipath?>mt_slog_user?action=search_user">
+		<?cs include:config.cspath+"dmt_page_para.html" ?>
+		<input type="hidden" name="dul_user_name" value="<?cs var:config.dul_user_name?>">
+	</form>
 
-		<div class="pageHeader" style="border:1px #B8D0D6 solid">
-			<form onsubmit="return navTabSearch(this, 'dmt_user');" action="<?cs var:config.cgipath?>mt_slog_user?action=search_user" method="get">
-			<div class="searchBar">
-				<table class="searchContent" >
-					<tr>
-						<td>
-							账号名：<input type="text" name="dul_user_name" id="dul_user_name" size="16" value="<?cs var:config.dul_user_name ?>" />
-						</td>
-						<td>
-							<button type="submit" class="sexybutton" id="dul_btn_submit"><span><span><span class="search">查找</span></span></span></button>
-							<button type="button" class="sexybutton" onclick="return dulClearSearch()"><span><span><span class="erase">重填</span></span></span></button>
-						</td>
-					</tr>
-				</table>
-			</div>
-			</form>
-		</div>
-	
-		<div class="pageContent" style="border-left:1px #B8D0D6 solid;border-right:1px #B8D0D6 solid">
-			<div class="panelBar">
-				<ul class="toolBar">
-					<li><a class="add" href="#" onclick="return dulAddNewUser();"><span>添加</span></a></li>
-					<li class="line">line</li>
-					<li><a class="delete" href="#" onclick="return dulDeleteUser();"><span>删除</span></a></li>
-					<li class="line">line</li>
-					<li><a class="edit" href="#" onclick="return dulModUser();"><span>修改</span></a></li>
-					<li class="line">line</li>
-					<li><a class="edit" href="#" onclick="return dulSuResetPass();"><span>重置密码</span></a></li>
-					<li class="line">line</li>
+	<form onsubmit="return navTabSearch(this, 'dmt_user');" action="<?cs var:config.cgipath?>mt_slog_user?action=search_user" method="get">
+		<div class="searchBar">
+			<ul class="searchContent" >
+				<li>
+					<label>账号名:</label><input type="text" name="dul_user_name" id="dul_user_name" size="16" value="<?cs var:config.dul_user_name ?>" />
+				</li>
+			</ul>
+			<div class="subBar">
+				<ul>
+					<li class="width:auto"><button type="submit" class="buttonActive"><i class='icon-search icon-large '></i>查找</button></li>
+					<li><button class="buttonActive" onclick="return dulClearSearch()" ><i class="icon-trash icon-large"></i>重填</button></li>
 				</ul>
 			</div>
-
-			<div>
-				<table class="list" width="100%" layoutH="90">
-					<thead>
-						<tr>
-							<th width="10">序号</th>
-
-							<?cs if:config.order_user_id ?>
-							<th width="30" orderField="user_id" class="<?cs var:config.order_user_id ?>">账号 id</th>
-							<?cs else ?>
-							<th width="30" orderField="user_id" class="desc">账号 id</th>
-							<?cs /if ?>
-
-							<?cs if:config.order_user_name ?>
-							<th width="60" orderField="user_name" class="<?cs var:config.order_user_name ?>">账号名</th>
-							<?cs else ?>
-							<th width="60" orderField="user_name" class="asc">账号名</th>
-							<?cs /if ?>
-
-							<?cs if:config.order_last_login_time ?>
-							<th width="70" orderField="last_login_time" class="<?cs var:config.order_last_login_time ?>">最后登陆时间</th>
-							<?cs else ?>
-							<th width="70" orderField="last_login_time" class="asc">最后登陆时间</th>
-							<?cs /if ?>
-							<th width="70">最后登陆IP</th>
-							<th width="70">IP归属地</th>
-							<th width="100">电子邮箱</th>
-							<th width="80">备注</th>
-							<th width="20">详情</th>
-						</tr>
-					</thead>
-					<tbody id="dul_list_user">
-					</tbody>
-				</table>
-	
-				<div class="panelBar" layoutH="0">
-					<div class="pages">
-						<span>每页显示</span>
-						<select name="numPerPage" onchange="navTabPageBreak({numPerPage:this.value})">
-							<option value="10">10</option>
-							<option value="20">20</option>
-							<option value="50">50</option>
-							<option value="100">100</option>
-							<option value="200">200</option>
-						</select>
-						<span>条，共 <?cs var:config.totalCount ?>  条</span>
-					</div>
-					<div class="pagination" targetType="navTab" totalCount="<?cs var:config.totalCount ?>" numPerPage="<?cs var:config.numPerPage ?>" pageNumShown="<?cs var:config.pageNumShown ?>" currentPage="<?cs var:config.currentPage ?>"></div>
-				</div>
-
-			</div> 
 		</div>
+	</form>
+</div>
+	
+<div class="pageContent">
+	<div class="panelBar">
+		<ul class="toolBar">
+			<li><a href="#" onclick="return dulAddNewUser();"><i class='icon-plus'></i>添加</a></li>
+			<li class="line">line</li>
+			<li><a href="#" onclick="return dulDeleteUser();"><i class='icon-minus'></i>删除</a></li>
+			<li class="line">line</li>
+			<li><a href="#" onclick="return dulModUser();"><i class='icon-edit'></i>修改</a></li>
+			<li class="line">line</li>
+			<li><a href="#" onclick="return dulSuResetPass();"><i class='icon-key'></i>重置密码</a></li>
+			<li class="line">line</li>
+		</ul>
 	</div>
-</div> <!-- unitBox -->
+	<table class="list" width="100%" layoutH="0">
+		<thead>
+			<tr>
+				<th width="10">序号</th>
+
+				<?cs if:config.order_user_id ?>
+				<th width="30" orderField="user_id" class="<?cs var:config.order_user_id ?>">账号 id</th>
+				<?cs else ?>
+				<th width="30" orderField="user_id" class="desc">账号 id</th>
+				<?cs /if ?>
+
+				<?cs if:config.order_user_name ?>
+				<th width="60" orderField="user_name" class="<?cs var:config.order_user_name ?>">账号名</th>
+				<?cs else ?>
+				<th width="60" orderField="user_name" class="asc">账号名</th>
+				<?cs /if ?>
+
+				<?cs if:config.order_last_login_time ?>
+				<th width="70" orderField="last_login_time" class="<?cs var:config.order_last_login_time ?>">最后登陆时间</th>
+				<?cs else ?>
+				<th width="70" orderField="last_login_time" class="asc">最后登陆时间</th>
+				<?cs /if ?>
+				<th width="70">最后登陆IP</th>
+				<th width="70">IP归属地</th>
+				<th width="100">电子邮箱</th>
+				<th width="80">备注</th>
+				<th width="20">详情</th>
+			</tr>
+		</thead>
+		<tbody id="dul_list_user">
+		</tbody>
+	</table>
+	<?cs include:config.cspath+"dmt_page.html" ?>
+</div> 
 
 <script language="javascript" type="text/javascript">
 var dul_userinfo = $.parseJSON('<?cs var:config.userinfo ?>');
