--- a/html/dmt_user_center.html
+++ b/html/dmt_user_center.html
@@ -51,13 +51,17 @@ tton></div></div></li>
     </div>
 </div>
 
-<div class="navTab-panel tabsPageContent layoutBox" style="overflow:auto" id='duc_div'>
+<div class="navTab-panel tabsPageContent layoutBox" style="overflow:auto" id='duc_div' defH='580'>
 	<div>
-		<div class="panel" align='center' style="width:320px; float:left; margin:6px;" defH="240">
-			<h1>账号信息</h1>
+		<div class="panel" align='center' style="width:320px; float:left; margin:6px;" defH="280">
 			<div>
 				<table width="100%" align="center" class="list" style="margin-top:2px">
 					<thead>
+						<tr>
+							<th colspan="3" style='height:28px; font-size:16px; text-align:center;font-weight:bold;'>
+							账号信息
+							</th>
+						</tr>
 						<tr>
 							<th class="ucPageTdName">字段名</th>
 							<th class="ucPageTdVal">字段值</th>
@@ -120,10 +124,14 @@ tton></div></div></li>
 		</div>
 
 		<div class="panel" align='left' style="float:left; margin:6px 15px;width:620px">
-			<h1>最近登陆历史记录</h1>
 			<div>
 				<table width="100%" align="center" class="list" style="margin-top:2px">
 					<thead>
+						<tr>
+							<th colspan="5" style='height:28px; font-size:16px; text-align:center;font-weight:bold;'>
+							最近登陆历史记录
+							</th>
+						</tr>
 						<tr>
 							<th class="ucPageTdVal">序 号</th>
 							<th class="ucPageTdVal">登录时间</th>
